--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^2.2.1",
     "@next/font": "13.1.6",
     "@reduxjs/toolkit": "^1.9.2",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.2",
@@ -21,6 +24,7 @@
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
+    "stripe": "^11.11.0",
     "styled-components": "^5.3.6",
     "urql": "^3.0.3"
   }
